--- a/index.html
+++ b/index.html
@@ -39,24 +39,24 @@
         <p>A COVID rengeteg családban hetekig tart, mire lezajlik. Nálunk is így volt ez. Ha egy elhúzódó betegségről van szó, ott egész egyszerűen az agyi és az érzelmi tevékenységeink IS felborulnak. Ez persze bármilyen más betegségre igaz. <b>A test és a psziché össze vannak kötve egymással</b>, egyik tükrözi a másikat.</p>
 
         <h2>2. Elindulni a lejtőn</h2>
-        <p>Nagyon fontos tudni, hogy emiatt <b>egy beteg állapotban a rosszkedv gyakorlatilag garantált.</b> 🤷‍♀️</p>
+        <p>Nagyon fontos tudni, hogy emiatt <b>egy beteg állapotban a rosszkedv gyakorlatilag garantált.</b> &#129335;&#8205;&#9792;&#65039;</p>
         <p>Sokkal labilisabbá válunk, könnyebben rászűkülünk negatív információkra. A megoldáskeresés vagy -gyártás szinte egyáltalán nem megy. Mindentől elmegy a kedvünk, még az olyan dolgoktól is, amiktől jobbá válhatna a hangulatunk ⏩ így lesz belőle süllyedés, süllyedés, süllyedés...</p>
 
         <h2>3. Szenvedés a kapcsolatokban</h2>
         <p>Az egyik legfontosabb mozzanat, hogy <b>a kapcsolatainkat ilyenkor elkezdjük MEGTERHELNI.</b> Igen, mindenki. Még azok is, akik csendes betegek, visszahúzódó túlélők.</p>
-        <p>Ilyenkor egy ember kiesik minden szerepéből. Társ, szülő, barát, marketing menedzser, az összesből. Beszűkült a fizikai, mentális és érzelmi kapacitása ⏩ nem tud részt venni az élettel járó teendőkben, nem lehet számítani rá a megoldásokban és kevésbé elérhető érzelmileg (ha nem teljesen elérhetetlen). És ez mind teljesen érthető. 🤷‍♀️</p>
+        <p>Ilyenkor egy ember kiesik minden szerepéből. Társ, szülő, barát, marketing menedzser, az összesből. Beszűkült a fizikai, mentális és érzelmi kapacitása ⏩ nem tud részt venni az élettel járó teendőkben, nem lehet számítani rá a megoldásokban és kevésbé elérhető érzelmileg (ha nem teljesen elérhetetlen). És ez mind teljesen érthető. &#129335;&#8205;&#9792;&#65039;</p>
         <p>De ilyenkor “hiányzunk” mindenkinek. Miközben még aggódnak is értünk.</p>
 
         <h2>4. A negatív spirál</h2>
         <p>Ha valaki szenved a jelenlétünkben, attól valójában mi is elkezdjük rosszul érezni magunkat, nem igaz? A negatív kolléga, aki csak megérkezik és mindenki magába fordul a szobában...</p>
         <p>Hatással vagyunk a többiekre. És ha a környezet IS beteg, akkor nekik sincs sok erejük. De ha nem is azok, egy idő után elkezdenek elfáradni, mert a beteg helyett extrát tesznek bele, közben kevesebbet kapnak tőle vissza, mint máskor.</p>
-        <p class="divider">Amikor a környezet is elkezd lefelé menni a hangulati görbén, na az pedig visszahat a betegre. 🤷‍♀️ Megérkeztünk, tessék, <b>kész a negatív érzelmi spirál!</b> Erre a COVID-dal most nagyon könnyű rácsúszni akár egy egész családnak. Szerencsére jó hosszú hetekig eltart, van rá alkalom...</p>
+        <p class="divider">Amikor a környezet is elkezd lefelé menni a hangulati görbén, na az pedig visszahat a betegre. &#129335;&#8205;&#9792;&#65039; Megérkeztünk, tessék, <b>kész a negatív érzelmi spirál!</b> Erre a COVID-dal most nagyon könnyű rácsúszni akár egy egész családnak. Szerencsére jó hosszú hetekig eltart, van rá alkalom...</p>
 
         <h2>5. COVID-rémület</h2>
         <p>A COVID-dal több speciális probléma is van.</p>
         <p>Egyrészt baromira elhúzódik az egész, MIKÖZBEN egyáltalán nem tudod, hogy mikor fordul esetleg kritikusra az állapotod. Egyik pillanatról a másikra lehetünk olyan szinten rosszul tőle, amihez azonnal kell a segítség... A rémtörténetek mindenkihez elérnek, és amikor benne vagyunk ebben a betegségben, sokan megélik ezt a félelmet.</p>
         <p>Üzenet azoknak, akik igen: EZ NORMÁLIS! A jelen körülmények között sajnos az.</p> 
-        <p class="divider">Ezekkel az információkkal, amik mindenkihez eljutottak, <b>a félelem vagy akár rettegés, sajnos teljesen érthető.</b> A placebo hatást mindenki ismeri, szóval nem újdonság kijelenteni, hogy ennek a betegségnek a híre legalább olyan romboló ránk, mint maga az organizmus. 🤷‍♀️</p>
+        <p class="divider">Ezekkel az információkkal, amik mindenkihez eljutottak, <b>a félelem vagy akár rettegés, sajnos teljesen érthető.</b> A placebo hatást mindenki ismeri, szóval nem újdonság kijelenteni, hogy ennek a betegségnek a híre legalább olyan romboló ránk, mint maga az organizmus. &#129335;&#8205;&#9792;&#65039;</p>
         <figure>
           <img src="assets/article-image-2.png" class="img-fluid" alt="article picture">
         </figure>
@@ -70,7 +70,7 @@
           "vajon a többiek hibáztatnak?" 🤔</p>
         
         <h2>7. Totális elszigeteltség</h2>
-        <p>Ilyet se nagyon éreztünk még, hogy amikor a leginkább szükséged lenne egy kis friss levegőre, legfeljebb az erkély opció. Egyébként "veszélyes vagy" másokra. 🤷‍♀️</p>
+        <p>Ilyet se nagyon éreztünk még, hogy amikor a leginkább szükséged lenne egy kis friss levegőre, legfeljebb az erkély opció. Egyébként "veszélyes vagy" másokra. &#129335;&#8205;&#9792;&#65039;</p>
         <p>Amúgy is elkezdte kifejteni a hatását az elménkre az ingerszegénység már a lockdown miatt is. Amikor betegek vagyunk, kevesebb motivációnk van dolgokhoz... de hetek távlatában egy szobában / ágyban élni, na az azért új világ. Új mindenkinek, aki nem volt még krónikus, ágyban fekvő beteg. És most tömegek voltak/vannak ezzel így.</p>
         <p>Az ágyban fekvőket legalább szokták látogatni vagy ápolni a szeretteik. Egy járványnál viszont csak az ajtó elé teszik le a csomagot, aztán hátralépnek, amikor kinézel.</p>
         <p>Jól teszik, érthető. De azt látnunk kell, hogy betegen, az összes fizikai és pszichés hatás alatt, amit csupán itt leírtam, EGYEDÜL feküdni és várni, hogy jobbra forduljanak a dolgok... <b>a magány definíciója lehet.</b> 💔  Vajon hányan élték ezt most át?</p>
