--- a/article1.html
+++ b/article1.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
   <!-- CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/common.css">
 </head>
 <body>
 
@@ -31,7 +31,7 @@
       <div class="article-body col-md-8 offset-md-2">
         <p class="article-lead">Volt szerencsém testközelből megismerkedni a vírussal és ez megihlette "a pszichológus tollát". 😉 👍 Íme néhány pszichés történés, ami "szabad szemmel" talán kevésbé látható. 👁 🔥</p>
         <figure>
-          <img src="assets/article-image-1.png" class="img-fluid" alt="article image">
+          <img src="assets/article1/article-image-1.png" class="img-fluid" alt="article image">
         </figure>
 
         <h2>1. Fizikailag DOWN lenni</h2>
@@ -58,7 +58,7 @@
         <p>Üzenet azoknak, akik igen: EZ NORMÁLIS! A jelen körülmények között sajnos az.</p> 
         <p class="divider">Ezekkel az információkkal, amik mindenkihez eljutottak, <b>a félelem vagy akár rettegés, sajnos teljesen érthető.</b> A placebo hatást mindenki ismeri, szóval nem újdonság kijelenteni, hogy ennek a betegségnek a híre legalább olyan romboló ránk, mint maga az organizmus. &#129335;&#8205;&#9792;&#65039;</p>
         <figure>
-          <img src="assets/article-image-2.png" class="img-fluid" alt="article picture">
+          <img src="assets/article1/article-image-2.png" class="img-fluid" alt="article picture">
         </figure>
 
         <h2>6. COVID-bűntudat</h2>
