--- a/1-jarvany-szerintem.html
+++ b/1-jarvany-szerintem.html
@@ -29,7 +29,7 @@
         <h2 class="article-subtitle">#szerintem #betegség #járvány #élmény</h2>
       </div>
       <div class="article-body col-md-8 offset-md-2">
-        <p class="article-lead">Volt szerencsém testközelből megismerkedni a vírussal és ez megihlette "a pszichológus tollát". 😉 👍 Íme néhány pszichés történés, ami "szabad szemmel" talán kevésbé látható. 👁 🔥</p>
+        <p class="article-lead">Volt szerencsém testközelből megismerkedni a vírussal és ez megihlette "a pszichológus tollát". 😉 👍 Íme néhány pszichés történés, ami "szabad szemmel" talán kevésbé látható. 👁️ 🔥</p>
         <figure>
           <img src="assets/article1/article-image-1.png" class="img-fluid" alt="article image">
         </figure>
@@ -85,7 +85,7 @@
       <div class="article-footer col-md-8 offset-md-2">
         <p>🤔  Szóval a szeretteinek igazán nem kíván ilyet az ember - annak mégis örülünk, hogy mi együtt mentünk keresztül ezen Karesszal és nem egyedül. A legjobban pedig annak, hogy meg tudtunk gyógyulni.</p>
         <p>Hát ilyen egy járvány szerintem.</p>
-        <p class="mb-0">👁 MESI.LIFE 🔥</p>
+        <p class="mb-0">👁️ MESI.LIFE 🔥</p>
       </div>
     </div>  
   </article>
