--- a/2-betegseg-tulelo-mental-strategiak.html
+++ b/2-betegseg-tulelo-mental-strategiak.html
@@ -143,7 +143,7 @@
         <p>Negatív érzéseket lehetséges teljesen feloldani, de ez egy összetett folyamat. Minél erősebb negatív érzésről
           van szó, annál inkább. Gyakran külső segítség kell hozzá, legalább kezdetben, és ez betegen nem biztos, hogy
           opció.</p>
-        <p><b>👁 A legfontosabb, amit ilyenkor tudnotok kell, hogy a ne gondolj rá, ne aggódj ezen, sz*rd le típusú
+        <p><b>👁️ A legfontosabb, amit ilyenkor tudnotok kell, hogy a ne gondolj rá, ne aggódj ezen, sz*rd le típusú
             "technikák" SAJNOS NEM MŰKÖDNEK. 🔥</b></p>
         <p>Ha egy ember nem aggódik valamin, akkor nincs szüksége rá, hogy “lesz*rja” azt a dolgot, mert eleve nem
           annyira fontos neki. Ha viszont valamit le kell sz*rni ⏩ <b>akkor ott valami igenis fontos.</b> És semmit sem
@@ -211,7 +211,7 @@
           mederbe terelni az életünkben, legalább részben - amire nincsen "Favipiravir", se oltás és amivel még biztosan
           lesz dolgunk itt a járvány kapcsán.
         </p>
-        <p class="mb-0">👁 MESI.LIFE 🔥</p>
+        <p class="mb-0">👁️ MESI.LIFE 🔥</p>
       </div>
     </div>
   </article>
