--- a/article3.html
+++ b/article3.html
@@ -54,7 +54,7 @@
           problémáira, életének FEJLŐDÉSÉRE kínáljon valamit.</p>
         <p>Az írásos folyamat valójában EGYIRÁNYÚ. A Q&A ebből az a verzió, ahol a lehető legnagyobb a másik fél
           részvétele, de még így is az. <b>A legjobb dolog, ami itt megtörténhet, hogy új gondolatokat indítunk el,
-            SZEMLÉLETET FORMÁLUNK egy másik emberben.</b> 👁️🔥 Ez az, ami kifejtheti a hatását az érzéseire és a talán a
+            SZEMLÉLETET FORMÁLUNK egy másik emberben.</b> 👁️️🔥 Ez az, ami kifejtheti a hatását az érzéseire és a talán a
           viselkedésére is.</p>
         <p><b>Tehát EZT a hatást keresd magadon Te is, amikor ilyen témában olvasol.</b></p>
         <ul>
@@ -121,7 +121,7 @@
           <li>Csak magára figyel - csak másokra figyel.</li>
         </ul>
         <p>☝ A lista végtelen.</p>
-        <p>👁️ <b>Ez azt jelenti, hogy az egyik tábornak MINDIG PONT A MÁSIK IRÁNYBAN FOG TÖRTÉNNI AZ ELŐRELÉPÉS, mint a
+        <p>👁️️ <b>Ez azt jelenti, hogy az egyik tábornak MINDIG PONT A MÁSIK IRÁNYBAN FOG TÖRTÉNNI AZ ELŐRELÉPÉS, mint a
             másiknak!</b> 🔥 Ezt a tényt mindig figyelembe kell venni, amikor egy tanáccsal találkozunk. És ez sok
           komment-vitára is magyarázatot adhat az ilyen témájú írásoknál. 🤔</p>
         <p>📑 Vajon Te milyen pólus vagy egy adott témában, amiről szó van épp? <br>📑 Amit olvasol, segít tájékozódni
@@ -202,7 +202,7 @@
         <p>Amikor tanácsokkal találkozol, mindig figyelj a saját iránytűdre, mert ennél nem létezik jobb a számodra, és
           aki neked hiteles, attól tanulj bármiben. Életmód témákban feltétlenül.</p>
         <p>Ha én az vagyok neked, annak nagyon örülök, <b>akkor ISTEN HOZOTT nálam.</b> 🤗 🙌 💕</p>
-        <p class="mb-0">👁️ MESI.LIFE 🔥</p>
+        <p class="mb-0">👁️️ MESI.LIFE 🔥</p>
       </div>
     </div>
   </article>
