--- a/article3.html
+++ b/article3.html
@@ -38,7 +38,7 @@
           <p>Tavaszi megújulásom alatt rájöttem, hogy Q&A (kérdezz-felelek) irányban is szeretném kiaknázni az oldalam.
             Amióta elkezdtem az Instázást, természetes módon megtörtént, hogy megkerestetek kérdésekkel privát
             üzenetekben. Ezekből többször király beszélgetések alakulnak ki, mély, értelmes, értékes. Ilyenkor azt
-            érzem, hogy egy igazi ember igazi problémájára tudok gondolatokat átadni. <br> Szeretem. 🤗</p>
+            érzem, hogy egy igazi ember igazi problémájára tudok gondolatokat átadni. Szeretem. 🤗</p>
           <p>Most szeretnék ebből a csatornám közönségének is visszaforgatni tanácsokat. Az írásaim egyébként is tele
             vannak technikákkal és javaslatokkal, szóval úgy érzem, hasznos lefektetni az alapokat ehhez a műfajhoz.</p>
           <p><b>👇 Most egyszerre fogsz tippeket olvasni, hogy Te mire figyelj, amikor tanácsot kapsz, és arról is, hogy
@@ -54,7 +54,7 @@
           problémáira, életének FEJLŐDÉSÉRE kínáljon valamit.</p>
         <p>Az írásos folyamat valójában EGYIRÁNYÚ. A Q&A ebből az a verzió, ahol a lehető legnagyobb a másik fél
           részvétele, de még így is az. <b>A legjobb dolog, ami itt megtörténhet, hogy új gondolatokat indítunk el,
-            SZEMLÉLETET FORMÁLUNK egy másik emberben.</b> 👁️️🔥 Ez az, ami kifejtheti a hatását az érzéseire és a talán a
+            SZEMLÉLETET FORMÁLUNK egy másik emberben.</b> 👁️️🔥 Ez az, ami kifejtheti a hatását az érzéseire és talán a
           viselkedésére is.</p>
         <p><b>Tehát EZT a hatást keresd magadon Te is, amikor ilyen témában olvasol.</b></p>
         <ul>
@@ -158,7 +158,7 @@
         <p>😍 Ha valamit IGAZNAK ÉRZEL & JÓ ÉRZÉS követni, kipróbálni, megnézni - tedd meg! Ekkor könnyen lesz hozzá
           belső motivációd és nem lesz belőle erőlködés sem. Aztán figyeld meg, hogy mi történik és nincs más dolgod,
           mint hogy folyamatosan TANULJ belőle.</p>
-        <p>️Az igazság az, és ezt mindenki tudja, hogy amikor valami “nem jön eléggé”, hogy megtegyük, akkor
+        <p>Az igazság az, és ezt mindenki tudja, hogy amikor valami “nem jön eléggé”, hogy megtegyük, akkor
           valószínűleg nem is fogjuk megtenni. De ha mégis, akkor úgyis csak fél-energiát tudunk beletenni... amiből
           persze fél-eredmények születnek majd... aztán ott állunk, hogy <i>hát ez a dolog nem is működik.</i> <br>És
           végül elengedjük.</p>
