--- a/article4.html
+++ b/article4.html
@@ -160,7 +160,8 @@
         <p>Végső soron az igényeink metszete dönti el minden kapcsolatunk minőségét és sorsát. Azt szeretném,
           hogy elkezdjünk tudatossá válni erre a folyamatra.</p>
         <p class="mb-0">👁️️ MESI.LIFE 🔥</p>
-
+      </div>
+    </div>
   </article>
 
   <footer class="container">
