--- a/article6.html
+++ b/article6.html
@@ -45,7 +45,7 @@
   <article class="container">
     <div class="row">
       <div class="article-header col-md-8 offset-md-2">
-        <h1 class="article-title"><span>RÓZSASZÍN KÖD.</span> tMi az?</h1>
+        <h1 class="article-title"><span>RÓZSASZÍN KÖD.</span> Mi az?</h1>
         <h2 class="article-subtitle">#párkapcsolat #szerelem #értsmegtöbbet</h2>
       </div>
       <div class="article-body col-md-8 offset-md-2">
