--- a/article7.html
+++ b/article7.html
@@ -49,17 +49,17 @@
 				<h2 class="article-subtitle">#érzelmek #energiák #gyakorlat #szerintem #fotózás</h2>
 			</div>
 			<div class="article-body col-md-8 offset-md-2">
-				<div class="article-lead">
+				<div class="article-lead pb-0">
 					<p>Kicsit extra témát választottam erre a hétre. Pár hete óriási élmény volt, hogy részt vehettünk
 						egy profi fotósoknak szóló workshopon. Mi voltunk az élő esküvői pár, akikkel egy egész extrém
 						szabadtéri helyszínen gyakorolta a praktikákat egy kb. 15 fős, mindennel felszerelt csapat. 3
 						órán át folyamatosan pózoltunk, bújtunk és búgtunk! 😄 👍</p>
 					<p>Így volt szerencsém bepillantani A LENCSE & AZ EMBER kapcsolatába ezen a színtéren... és most a
 						pszichológus tolla szárnyra kell. 🖋️</p>
+						<figure>
+							<img src="assets/article7/article-image-1.png" class="img-fluid" alt="article image">
+						</figure>
 				</div>
-				<figure>
-					<img src="assets/article7/article-image-1.png" class="img-fluid" alt="article image">
-				</figure>
 
 
 				<h2>1. MÁS ÉRZÉS MÁS-MÁS EMBER LENCSÉJÉBE NÉZNI 👀</h2>
@@ -110,7 +110,7 @@
 							valószínűleg az ő reakciói is!</b> 😉
 					</li>
 				</ol>
-				<p>És most gondolj csak bele ebbe: ezt a gyakorlatot szívesen kipróbálnád, mondjuk az új főnököddel?
+				<p>És most gondolj csak bele ebbe: <i>ezt a gyakorlatot szívesen kipróbálnád, mondjuk az új főnököddel?</i>
 					Valószínűleg egyből érzed, hogy isten ments!!! <b>Valahol a zsigereinkben tudjuk, hogy az érzelmi energia hat
 						a többiekre.</b> Kockázatos lenne rádobni ezt a "csúnyánnézést" valakire, akivel nincs egy megalapozott,
 					bizalmi
@@ -131,7 +131,7 @@
 					mondjuk egy közeli portrénál. És ez a modell a fotós hatása alatt is állt.</p>
 				<p><b>Amikor egy képet hitelesnek, igazinak érzünk, az az érzelmi információk miatt van. Amikor műnek, az
 						is!</b></p>
-				<figure>
+				<figure class="pt-0">
 					<img src="assets/article7/article-image-4.png" class="img-fluid" alt="article picture">
 				</figure>
 
