--- a/article7.html
+++ b/article7.html
@@ -55,7 +55,7 @@
 						szabadtéri helyszínen gyakorolta a praktikákat egy kb. 15 fős, mindennel felszerelt csapat. 3
 						órán át folyamatosan pózoltunk, bújtunk és búgtunk! 😄 👍</p>
 					<p>Így volt szerencsém bepillantani A LENCSE & AZ EMBER kapcsolatába ezen a színtéren... és most a
-						pszichológus tolla szárnyra kell. 🖋️</p>
+						pszichológus tolla szárnyra kel. 🖋️</p>
 						<figure>
 							<img src="assets/article7/article-image-1.png" class="img-fluid" alt="article image">
 						</figure>
@@ -99,7 +99,7 @@
 				<h2 class="text-center">#2 GYAKORLAT 💡</h2>
 				<p>Az is elég lehet, ha ezt lejátszod csak fejben. De ha meg akarod nézni élőben, akkor arra figyelj,
 					hogy olyannal próbáld ki, aki elég közel áll hozzád. 😉</p>
-				<ol>
+				<ol class="gutter">
 					<li class="gutter">Válassz egy partnert. Csukd be a szemed és fókuszálj arra az érzésre, hogy ez a másik ember MEGSÉRTETT
 						téged. Jól éld bele magad ebbe az érzésbe, akár el is képzelhetsz pár kellemetlen jelenetet... amikor
 						rendesen eltöltött ez a hangulat ⏩ <b>nyisd ki a szemed és nézz rá a másikra. Vedd fel vele a szemkontaktust
