--- a/article7.html
+++ b/article7.html
@@ -85,7 +85,7 @@
 				<p>Oké, és most egy 10 másodpercre lazíts, ne gondolj semmire. A szemedet is becsukhatod. Ürítsd ki
 					magadból a benyomásokat, amikkel találkoztál.</p>
 				<p>Ha megpihentél, jöhet a ráhangolódás a másodikra... 👉</p>
-				<figure class="gutter">
+				<figure class="gutter pt-0">
 					<img src="assets/article7/article-image-3.png" class="img-fluid" alt="article image">
 				</figure>
 				<p>Ezek a képek nem szólnak hozzád, mégis egyértelműen HATNAK rád, nem igaz? Ráadásul nagyon eltérően.
