--- a/article7.html
+++ b/article7.html
@@ -143,12 +143,11 @@
 				<p>Már ott elindul a hatás, AHOGY ránéznek a lencsén keresztül egy modellre. Ezért egy munka előtt és alatt
 					szerintem 2 ÉRZÉST érdemes kifejezetten erősíteni magatokban, ha a lencse másik oldalán álltok:</p>
 				<div class="divider gutter">
-					<p>🌷 Lásd SZÉPNEK, aki előtted van! Lásd bele a szépséget, mert érződik. Keress rajta valamit, amit szépnek
-						tudsz látni! De akár az is működik, ha gondolatban felidézel valamit, amit gyönyörűnek tartasz és ezt a
+					<p>🌷 <b>Lásd SZÉPNEK, aki előtted van!</b> Lásd bele a szépséget, mert érződik. Keress rajta valamit, amit szépnek
+						tudsz látni!De akár az is működik, ha gondolatban felidézel valami teljesen mást, amit gyönyörűnek tartasz és ezt a
 						hangulatot vetíted ki a fotózás alatt, újra és újra...</p>
 					<p>🔥 <b>Maradj a MAGABIZTOSSÁG energiájában, amennyire csak tudsz.</b> Igen, ez lehet nehéz feladat egy pálya
-						elején
-						vagy egy necces helyzetben például. De <b>valószínűleg ez adja az egyik legnagyobb különbséget a modell
+						elején vagy egy necces helyzetben például. De <b>valószínűleg ez adja az egyik legnagyobb különbséget a modell
 							oldalán. "Ez a lencse úgy néz rám, mint aki tudja, mit csinál, vagy mint, aki keresgél,
 							próbálkozik...?"</b></p>
 					<p class="mb-0">Egy oktatáson ez az energia teljesen természetes, hiszen ott mindenki tanul éppen. Így tudtam
@@ -173,7 +172,7 @@
 
 			<div class="article-footer col-md-8 offset-md-2">
 				<p>Az érzelmi információk nagyon fontos szerepet játszanak abban az alkotási folyamatban, ami egy fotózás. Ezért
-					láttam benne nagyszerű példát ahhoz, hogy megmutassam Nektek az érzelmek hatás mechanizmusát. Tudatosan
+					láttam benne nagyszerű példát ahhoz, hogy megmutassam Nektek az érzelmek hatásmechanizmusát. Tudatosan
 					érzelmekkel dolgozni először kihívás lehet, mégis érdemes kísérletezni vele, mert tapasztalatból tudom, hogy
 					tanulható. (Hölgyek előnyben. 😉)</p>
 				<p>Ha valaki kipróbálja az itt leírt gyakorlatokat, ötleteket, <b>írjatok a tapasztalatokról!</b> Mikor elkap az ihlet,
