--- a/article8.html
+++ b/article8.html
@@ -62,7 +62,7 @@
 
 
         <h2>1. VAN 🔥</h2>
-        <p><b>👁 MINDEN, AMI IGAZÁN LÉNYEGES, A NEGATÍVUMOKNÁL KEZDŐDIK. 🔥</b></p>
+        <p><b>👁️ MINDEN, AMI IGAZÁN LÉNYEGES, A NEGATÍVUMOKNÁL KEZDŐDIK. 🔥</b></p>
         <p>Szokatlan és erős állításnak tűnhet elsőre, de itt most nem a hagyományos magyar kesergésről van szó. Az
           egész cikkben ezt fogom kibontani.</p>
         <p>Két ember között egy kapcsolat jó esetben létre sem jön, ha nincs közöttük elég pozitív kötőanyag. Legyen szó
@@ -124,37 +124,65 @@
             <li>Ha ez megvan és én ezt érzem, AZ BIZALOM.</li>
             <li>Ha ez megvan és én ezt <i>nem</i> érzem, az BIZALMATLANSÁG.</li>
             <li>Ha ez nincs meg, de én <i>mégis</i> számítok rád, na az NAIVITÁS.</li>
-            <li>És ha ez nincs meg ÉS én ezt pontosan tudom: az egy ÉRDEKKAPCSOLAT, ami ha nyílt és tudott,</li>
-            <li>akkor egy teljesen korrekt dolog, ami senkinek sem fog csalódást okozni.</li>
+            <li>És ha ez nincs meg ÉS én ezt pontosan tudom: az egy ÉRDEKKAPCSOLAT, ami ha nyílt és tudott, akkor egy
+              teljesen korrekt dolog, ami senkinek sem fog csalódást okozni.</li>
           </ul>
         </div>
         <p>NEM vagyunk kötelesek mindenkit képviselni. Ha 100%-ig rá akarunk szolgálni valaki bizalmára, az teljes
           elköteleződést kíván, ami egy nagy feladat. És ez így van jól, mert így már érezzük, hogy SÚLYA VAN. Így már
-          meg kell válaszolnunk a kérdést, hogy <b>ki</b> ér az életünkben annyit, hogy <b>ennyi</b> energiát akarjunk rászánni. Így
+          meg kell válaszolnunk a kérdést, hogy <b>ki</b> ér az életünkben annyit, hogy <b>ennyi</b> energiát akarjunk
+          rászánni. Így
           érkezünk meg oda, hogy amikor valakivel valóban bizalmi kapcsolatunk van: az komoly érték.</p>
-        <p>Az igazi bizalom akkor <i>kezdődik</i>, amikor jóban-ROSSSZBAN kipróbáljuk egymást. Amikor Te nem vagy elégedett valamivel, azzal mit kezdek én? Amikor Neked fáj valami, akkor én mit csinálok? Több és több élethelyzet mélyebb és mélyebb bizalmat fog köztünk építeni. Szóval <b>a viszontagságok egyik legnagyobb értéke, hogy kizárólag belőlük születhet meg a Valódi Bizalom.</b></p>
+        <p>Az igazi bizalom akkor <i>kezdődik</i>, amikor jóban-ROSSSZBAN kipróbáljuk egymást. Amikor Te nem vagy
+          elégedett valamivel, azzal mit kezdek én? Amikor Neked fáj valami, akkor én mit csinálok? Több és több
+          élethelyzet mélyebb és mélyebb bizalmat fog köztünk építeni. Szóval <b>a viszontagságok egyik legnagyobb
+            értéke, hogy kizárólag belőlük születhet meg a Valódi Bizalom.</b></p>
         <figure class="pt-0">
           <img src="assets/article8/article-image-2.png" class="img-fluid" alt="article image">
         </figure>
 
 
         <h2>4. AZ IGAZI ELFOGADÁS 💞</h2>
-        <p>Konfliktusnak nevezhetjük azt, amikor EGYMÁSSAL kerülünk összeütközésbe. Teljesen más mellette állni valakinek valami nehézben, mint <i>szemben állni vele</i> valami fontosban. A konfliktusok témája óriási. Most azt szeretném kiemelni, amit ADNI tudnak nekünk azok a konfliktusok, amikből sikeresen tudunk kijönni együtt.</p>
-        <p class="divider">Amikor úgy szeretsz engem, hogy minden tuti szuper, az csodálatos. Amikor jó formában vagyok, amikor egyetértünk, nevetek, kedves vagyok stb. stb. <b>De amikor úgy is ki akarunk állni egymás mellett, hogy rossz formában vagyunk, SŐT, egymás ellen vagyunk épp valamiben... amikor itt SEM adjuk fel, DE nem is érjük be azzal, hogy CSAK egyvalakinek legyen jó... ezek azok a pontok, AHOL AZ IGAZI TANUSÁGTÉTEL TÖRTÉNIK.</b></p>
-        <p>Őszintén, azt gondolom, hogy a szívünk mélyén mind erre az élményre vágyunk a kapcsolatainkban. Konfliktus nélkül nem vagyunk próbára téve, nincs köztünk különbség és nem állunk válaszút előtt. Kell a válaszút ahhoz, hogy kiválaszthassanak. <i>“Ha tényleg elfogadod, aki vagyok, és mindenestől engem választasz, akkor is, amikor nehéz”</i> - ennek ereje van. 🔥 EZ kötelék. 🔥</p>
-        <p>És tudjátok, ezt sem kötelező. Nem kötelező egy másik embert mindenestől elfogadnunk. <b><i>Sőt, ha az lenne, hová tűnne az értéke?!</i> Ez a mi egyedi lehetőségünk és egyedi ajándékunk egymás számára.</b> Megjátszani csak ideig-óráig lehet, azután az élethelyzetekkel együtt lehull a lepel. Ezt a mélységet valójában csak a tényleg hozzánk illő embereknek fogjuk tudni megadni az életünkben. Csak olyanoknak, akik szintén meg tudják adni nekünk. </p>
+        <p>Konfliktusnak nevezhetjük azt, amikor EGYMÁSSAL kerülünk összeütközésbe. Teljesen más mellette állni
+          valakinek valami nehézben, mint <i>szemben állni vele</i> valami fontosban. A konfliktusok témája óriási. Most
+          azt szeretném kiemelni, amit ADNI tudnak nekünk azok a konfliktusok, amikből sikeresen tudunk kijönni együtt.
+        </p>
+        <p class="divider">Amikor úgy szeretsz engem, hogy minden tuti szuper, az csodálatos. Amikor jó formában vagyok,
+          amikor egyetértünk, nevetek, kedves vagyok stb. stb. <b>De amikor úgy is ki akarunk állni egymás mellett, hogy
+            rossz formában vagyunk, SŐT, egymás ellen vagyunk épp valamiben... amikor itt SEM adjuk fel, DE nem is érjük
+            be azzal, hogy CSAK egyvalakinek legyen jó... ezek azok a pontok, AHOL AZ IGAZI TANUSÁGTÉTEL TÖRTÉNIK.</b>
+        </p>
+        <p>Őszintén, azt gondolom, hogy a szívünk mélyén mind erre az élményre vágyunk a kapcsolatainkban. Konfliktus
+          nélkül nem vagyunk próbára téve, nincs köztünk különbség és nem állunk válaszút előtt. Kell a válaszút ahhoz,
+          hogy kiválaszthassanak. <i>“Ha tényleg elfogadod, aki vagyok, és mindenestől engem választasz, akkor is,
+            amikor nehéz”</i> - ennek ereje van. 🔥 EZ kötelék. 🔥</p>
+        <p>És tudjátok, ezt sem kötelező. Nem kötelező egy másik embert mindenestől elfogadnunk. <b><i>Sőt, ha az lenne,
+              hová tűnne az értéke?!</i> Ez a mi egyedi lehetőségünk és egyedi ajándékunk egymás számára.</b>[]
+          Megjátszani csak ideig-óráig lehet, azután az élethelyzetekkel együtt lehull a lepel. Ezt a mélységet
+          valójában csak a tényleg hozzánk illő embereknek fogjuk tudni megadni az életünkben. Csak olyanoknak, akik
+          szintén meg tudják adni nekünk. </p>
         <p>Nincs ezzel semmi baj. Ez az egész egy felfedezőút, ahol őket kell keresni.</p>
         <figure class="pt-0">
           <img src="assets/article8/article-image-3.png" class="img-fluid" alt="article image">
         </figure>
 
         <h2>5. AZ IGAZI STABILITÁS ⛰️</h2>
-        <p><b>Igazi stabilitás csak akkor jött létre, ha a negatív élmények kezeléséBEN kialakult a stabilitásunk.</b> Az emberi kapcsolatokban nincsen annál nagyobb biztonság, mint amikor tudjuk, hogy még akkor is számíthatunk egymásra, amikor éppen kialakult köztünk valamilyen ellentét. Az előzmények után már biztosan értitek. Ha az élet hozza a nehézségeket és mi együtt akarunk haladni, ahhoz tudnunk kell közösen venni az akadályokat. Ha ezt nem csak úgy tesszük, mint két hajótörött, akik nagy nehezen átvergődnek a hullámokon, hanem idővel kialakul köztünk egy működő stratégia arra, ahogy a viharban kormányzunk... akkor váltunk a lehető legstabilabbá a tengeren. </p>
-        <p>Ez természetesen idő, helyzetek és egy közös tanulás lesz. Azt remélem, hogy sikerült most megmutatnom Nektek, hogy a negatív élmények nem csak szimplán elkerülhetetlenek, hanem óriási értékük van. Ez az a tűz, ami edz minket, ami a legmélyebb szövetségeinket építi. Szóval nem érdemes félni tőlük, vagy elkerülni akarni <b>>> navigálni akarni</b>, erre van szükség. Azt kívánom, hogy ehhez a tanuláshoz kapjatok kedvet! Talán lesz nálam egy s más a témában... 😉</p>
+        <p><b>Igazi stabilitás csak akkor jött létre, ha a negatív élmények kezeléséBEN kialakult a stabilitásunk.</b>
+          Az emberi kapcsolatokban nincsen annál nagyobb biztonság, mint amikor tudjuk, hogy még akkor is számíthatunk
+          egymásra, amikor éppen kialakult köztünk valamilyen ellentét. Az előzmények után már biztosan értitek. Ha az
+          élet hozza a nehézségeket és mi együtt akarunk haladni, ahhoz tudnunk kell közösen venni az akadályokat. Ha
+          ezt nem csak úgy tesszük, mint két hajótörött, akik nagy nehezen átvergődnek a hullámokon, hanem idővel
+          kialakul köztünk egy működő stratégia arra, ahogy a viharban kormányzunk... akkor váltunk a lehető
+          legstabilabbá a tengeren. </p>
+        <p>Ez természetesen idő, helyzetek és egy közös tanulás lesz. Azt remélem, hogy sikerült most megmutatnom
+          Nektek, hogy a negatív élmények nem csak szimplán elkerülhetetlenek, hanem óriási értékük van. Ez az a tűz,
+          ami edz minket, ami a legmélyebb szövetségeinket építi. Szóval nem érdemes félni tőlük, vagy elkerülni akarni
+          <b>>> navigálni akarni</b>, erre van szükség. Azt kívánom, hogy ehhez a tanuláshoz kapjatok kedvet! Talán lesz
+          nálam egy s más a témában... 😉</p>
         <p class="mb-0">👁️ MESI.LIFE 🔥</p>
 
 
-    </div>
+      </div>
   </article>
 
 
