--- a/article10.html
+++ b/article10.html
@@ -97,7 +97,7 @@
         <p class="mb-0"><i>És mi van, ha rosszul látom a helyzetet?</i></p>
         <p><i>Ha nem is igaz, hogy többet teszek bele?</i></p>
         <p>Azaz megkérdőjelezzük önmagunkat. Ez azért egy mély gödör, mert SOHA, SOHA nem fogunk tudni "objektív képpel" rendelkezni a kapcsolatunkról. <b>Mindig egy ember véleménye lesz egy másik emberrel szemben.</b> A környezetben lesz, aki velem ért egyet, lesz, aki veled. Valószínű attól függően, hogy kivel beszéltek többet.</p>
-        <p class="divider">Rengeteget időztem ilyen gödrökben és csak egyetlen kijáratot találtam belőlük: <b>MEGVÁLTOZNAK-E AZ ÉRZÉSEIM AKKOR, AMIKOR FONTOLÓRA VESZEM AZT IS, HOGY TÉVEDEK?</b> Ezt ki lehet próbálni. Ha érzem, hogy IGEN, akkor szuper. Akkor érdemes ebbe az irányba menni: mit vegyek MÉG észre, amit kapok a másiktól? Milyen értékek vannak MÉG ebben a kapcsolatban, amiket nem vettem eddig eléggé figyelembe? De ha NEM... ha újra és újra ott kötök ki, hogy hiányérzetem van, bárki bármit mond, akkor csak egy út van, ahol a hiányérzetem elmúlhat. <b>Ez az az út lesz, ahol KOMOLYAN VESZEM, AMIT ÉRZEK.</b></p>
+        <p class="divider mb-0">Rengeteget időztem ilyen gödrökben és csak egyetlen kijáratot találtam belőlük: <b>MEGVÁLTOZNAK-E AZ ÉRZÉSEIM AKKOR, AMIKOR FONTOLÓRA VESZEM AZT IS, HOGY TÉVEDEK?</b> Ezt ki lehet próbálni. Ha érzem, hogy IGEN, akkor szuper. Akkor érdemes ebbe az irányba menni: mit vegyek MÉG észre, amit kapok a másiktól? Milyen értékek vannak MÉG ebben a kapcsolatban, amiket nem vettem eddig eléggé figyelembe? De ha NEM... ha újra és újra ott kötök ki, hogy hiányérzetem van, bárki bármit mond, akkor csak egy út van, ahol a hiányérzetem elmúlhat. <b>Ez az az út lesz, ahol KOMOLYAN VESZEM, AMIT ÉRZEK.</b></p>
 
 
         <h2>6. TANULSÁG SZÜRET 💡🍇</h2>
